--- a/PolygonClient/MainWindow.xaml
+++ b/PolygonClient/MainWindow.xaml
@@ -6,6 +6,7 @@
     <Grid>
         <Button Name="SelectFileButton" Content="Select File" Click="SelectFileButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10"/>
         <TextBox Name="FilePathTextBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="400"/>
+        <Button Name="SendDataButton" Content="Send Data" Click="SendDataButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="420,50,0,0"/>
         <ListBox Name="PolygonsListBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,100,0,0" Width="760" Height="300"/>
     </Grid>
 </Window>
