--- a/PolygonClient/MainWindow.xaml
+++ b/PolygonClient/MainWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="PolygonClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:PolygonClient"
-        Title="Polygon Client" Height="450" Width="800">
+        Title="Polygon" Height="450" Width="800">
     <Grid>
-        <Button Name="SelectFileButton" Content="Select File" Click="SelectFileButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10"/>
-        <TextBox Name="FilePathTextBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="400"/>
-        <Button Name="SendDataButton" Content="Send Data" Click="SendDataButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="420,50,0,0"/>
-        <ListBox Name="PolygonsListBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,100,0,0" Width="760" Height="300"/>
+        <Button Content="Select File" Click="SelectFileButton_Click" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100"/>
+        <TextBox x:Name="FilePathTextBox" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="300"/>
+        <Button Content="Display Shapes" Click="DisplayShapeButton_Click" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Width="100"/>
+        <Button Content="Send Data" Click="SendDataButton_Click" HorizontalAlignment="Left" Margin="120,50,0,0" VerticalAlignment="Top" Width="100"/>
+        <ListBox x:Name="PolygonsListBox" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" Width="200" Height="300"/>
+        <Canvas x:Name="ShapeCanvas" Background="White" HorizontalAlignment="Left" Margin="220,100,0,0" VerticalAlignment="Top" Width="550" Height="300"/>
     </Grid>
 </Window>
