--- a/PolygonClient/MainWindow.xaml
+++ b/PolygonClient/MainWindow.xaml
@@ -1,13 +1,14 @@
 ﻿<Window x:Class="PolygonClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:views="clr-namespace:PolygonClient.Views"
         Title="Polygon" Height="450" Width="800">
     <Grid>
-        <Button Content="Select File" Click="SelectFileButton_Click" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox x:Name="FilePathTextBox" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="300"/>
-        <Button Content="Display Shapes" Click="DisplayShapeButton_Click" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Width="100"/>
-        <Button Content="Send Data" Click="SendDataButton_Click" HorizontalAlignment="Left" Margin="120,50,0,0" VerticalAlignment="Top" Width="100"/>
-        <ListBox x:Name="PolygonsListBox" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" Width="200" Height="300"/>
-        <Canvas x:Name="ShapeCanvas" Background="White" HorizontalAlignment="Left" Margin="220,100,0,0" VerticalAlignment="Top" Width="550" Height="300"/>
+        <Button Content="Select File"  HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Command="{Binding SelectFileCommand}"/>
+        <TextBox Text="{Binding OpenedFileName}" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="500"/>
+        <Button Content="Display Shapes" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Width="100" Command="{Binding DisplayShapeCommand}"/>
+        <Button Content="Send Data" HorizontalAlignment="Left" Margin="120,50,0,0" VerticalAlignment="Top" Width="100" Command="{Binding SendDataCommand}"/>
+        <ListBox ItemsSource="{Binding Shapes}" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" Width="200" Height="300"/>
+        <views:ShapeCanvas HorizontalAlignment="Left" Margin="220,100,0,0" VerticalAlignment="Top" DataContext="{Binding CanvasViewModel}"/>
     </Grid>
 </Window>
